# human-action-classification

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conda_env.yml  configure  environment.yml  eval.py  inception_from_scratch.py  pyproject.toml  run_image.py  run_webcam.py  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  MIGRATION_GUIDE.md  README.md  SECURITY.md  timm_model_families.md
.github/workflows/: ci.yml
configs/: train.yaml
configs/backbones/: backbone.yaml  inception_v3.yaml
configs/loss/: loss.yaml
configs/metrics/: metrics.yaml
configs/optimizer/: optimizer_adam.yaml
examples/: quickstart.ipynb
files-eval/: evaluate.py  img.txt  pose-gT.txt  pose.txt  scene-gT.txt  scene.txt
models/graph/retrained/retrained_v1.0/: output_labels.txt  retrained_labels.txt
models/numpy/: download.sh
models/pretrained/mobilenet_v1_0.50_224_2017_06_14/: download.sh
models/pretrained/mobilenet_v1_0.75_224_2017_06_14/: download.sh
models/pretrained/mobilenet_v1_1.0_224_2017_06_14/: download.sh
models/pretrained/resnet_v2_101/: download.sh
scripts/: broadcaster_ros.py  label_image.py  label_image_scene.py  simple_demo.py  visualization.py
src/: callbacks.py  dataloader.py  find_class_names.py  split.py  train.py  utils.py
src/hac/: __init__.py  cli.py
src/hac/common/: __init__.py  metrics.py
src/hac/data/: dataset.py
src/hac/image/: __init__.py
src/hac/inference/: EVALUATION_GUIDE.md  batch_evaluate.py  evaluate.py  pose_extractor.py  predictor.py
src/hac/models/: classifier.py
src/hac/training/: train.py
src/hac/utils/: convert_to_safetensors.py  transforms.py
src/hac/video/: __init__.py
tests/: test_basic.py
tf_pose/: __init__.py  estimator.py  eval.py  network_base.py  network_cmu.py  network_dsconv.py  network_mobilenet.py  network_mobilenet_thin.py  network_personlab.py  networks.py  pose_augment.py  pose_datamaster.py  pose_dataworker.py  pystopwatch.py  runner.py  train.py
tf_pose/pafprocess/: _pafprocess.cp36-win_amd64.pyd
tf_pose/pycocotools/: cocoeval.py  mask.py
tf_pose/slidingwindow/: ArrayUtils.py  Batching.py  Merging.py  RectangleUtils.py  SlidingWindow.py  WindowDistance.py  __init__.py
tf_pose/slim/nets/: resnet_v2.py
(+20 files in other folders)
